--- a/src/app/components/attendee-item/attendee-item.component.html
+++ b/src/app/components/attendee-item/attendee-item.component.html
@@ -1,16 +1,13 @@
 <div class="container-lg mt-5">
   <div class="card">
-    <h1 class="card-header">#{{attendee?.id}} {{attendee?.firstName}}</h1>
+    <h1 class="card-header bg-success">#{{attendee?.id}} {{attendee?.firstName}}</h1>
     <div class="card-body">
       <h3>{{attendee?.email}}</h3>
       <h2 class="card-title">
         {{attendee?.firstName}}
-        {{attendee!.lastName.toUpperCase()}}
+        {{attendee?.lastName?.toUpperCase()}}
       </h2>
       <p>Coming</p>
     </div>
-
-
-
   </div>
 </div>
