--- a/src/app/components/modal-new-reservation/modal-new-reservation.component.html
+++ b/src/app/components/modal-new-reservation/modal-new-reservation.component.html
@@ -1,7 +1,7 @@
 <div class="modal" tabindex="-1" [ngStyle]="{'display' : 'block'}">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header insert-new-itemmodal-normal-header">
+      <div class="modal-header insert-new-item modal-normal-header">
         <h1>Make new reservation</h1>
         <button type="button"
                 class="btn-close move-right"
