--- a/src/app/components/modal-new-reservation/modal-new-reservation.component.html
+++ b/src/app/components/modal-new-reservation/modal-new-reservation.component.html
@@ -28,9 +28,9 @@
               {{room.name}} | {{room.capacity}}
             </option>
           </select>
-          <pre>
-            {{newReservationForm.value | json}}
-          </pre>
+<!--          <pre>-->
+<!--            {{newReservationForm.value | json}}-->
+<!--          </pre>-->
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Submit</button>
           </div>
