--- a/src/app/components/attendees-autocomplete/attendees-autocomplete.component.html
+++ b/src/app/components/attendees-autocomplete/attendees-autocomplete.component.html
@@ -2,7 +2,7 @@
     <input type="text" matInput [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" [formControl]="myControl">
       <mat-option *ngFor="let user of filteredUsers | async" [value]="user">
-        {{user?.firstName}} {{user?.lastName}}
+        {{attendee?.email}}
       </mat-option>
     </mat-autocomplete>
 <!--  <pre>{{attendee.value | json}}</pre>-->
