Reservation edit and insert fixed.

--- a/src/app/components/edit-reservation/edit-reservation.component.html
+++ b/src/app/components/edit-reservation/edit-reservation.component.html
@@ -41,18 +41,18 @@
                     class="form-control form-select"
             >
               <option
-                *ngFor="let room of rooms"
+                *ngFor="let room of rooms$|async"
                 [value]="room.id">
                 {{room.name}}
               </option>
             </select>
-            <pre>{{editReservationForm.value | json}}</pre>
+<!--            <pre>{{editReservationForm.value | json}}</pre>-->
           </div>
           <!--                    <input type="hidden" id="reservationHost" name="reservationHost" formControlName="host" value="{{reservation?.host}}">-->
           <!--           host remaining unchanged-->
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Submit</button>
-            <button class="btn btn-danger ms-3" (click)="onClose()">Cancel</button>
+            <button type="button" class="btn btn-danger ms-3" (click)="onClose()">Cancel</button>
           </div>
         </form>
       </div>
