--- a/src/app/components/pending-attendee/pending-attendee.component.html
+++ b/src/app/components/pending-attendee/pending-attendee.component.html
@@ -1,6 +1,6 @@
 <div class="container-lg mt-5">
   <div class="card">
-    <h1 class="card-header">#{{pendingAttendee?.id}} {{pendingAttendee?.firstName}}</h1>
+    <h1 class="card-header bg-pending">#{{pendingAttendee?.id}} {{pendingAttendee?.firstName}}</h1>
     <div class="card-body">
       <h3>{{pendingAttendee?.email}}</h3>
       <h2 class="card-title">
