--- a/src/styles.css
+++ b/src/styles.css
@@ -139,8 +139,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: #4faf1f !important;
 }
 
-
-
+.bg-pending{
+  background-color: #e1c953 !important
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
