--- a/src/app/components/attendee-search-modal/attendee-search-modal.component.html
+++ b/src/app/components/attendee-search-modal/attendee-search-modal.component.html
@@ -8,26 +8,28 @@
         ></button>
       </div>
       <div class="modal-body modal-center-items">
-<!--        {{attendees|json}}-->
-<!--        <form class="example-form">-->
-<!--          <mat-form-field class="example-full-width" appearance="fill">-->
-<!--            <mat-label>Number</mat-label>-->
-<!--            <input type="text"-->
-<!--                   placeholder="Pick attendee"-->
-<!--                   aria-label="Number"-->
-<!--                   matInput-->
-<!--                   [matAutocomplete]="auto">-->
-<!--            <mat-autocomplete
+        <!--
+        <form class="autocomplete-form">
+          <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Number</mat-label>
+            <input type="text"
+                   placeholder="Pick attendee"
+                   aria-label="Number"
+                   matInput
+                   [matAutocomplete]="auto">
+                 <mat-autocomplete
                   autoActiveFirstOption
-                  #auto="matAutocomplete">-->
-<!--              <mat-option
+                  #auto="matAutocomplete">
+
+              <mat-option
                       *ngFor="let possibleAttendee of possibleAttendees$ | async"
-                      [value]="possibleAttendee.id">-->
-<!--                {{possibleAttendee.email}}-->
-<!--              </mat-option>-->
-<!--            </mat-autocomplete>-->
-<!--          </mat-form-field>-->
-<!--        </form>-->
+                      [value]="possibleAttendee.id">
+                {{possibleAttendee.email}}
+              </mat-option>
+
+            </mat-autocomplete>
+          </mat-form-field>
+        </form>-->
         <app-attendees-autocomplete>
 
         </app-attendees-autocomplete>
