--- a/src/app/components/attendees/attendees.component.html
+++ b/src/app/components/attendees/attendees.component.html
@@ -18,5 +18,6 @@
 <app-attendee-search-modal
   *ngIf="searchAttendeeModalVisible"
   (close)="searchAttendeeModalVisible=false"
+  (onAddUserToReservation)="addUserToReservation($event)"
 >
 </app-attendee-search-modal>
