--- a/src/styles.css
+++ b/src/styles.css
@@ -153,6 +153,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 100%;
 }
 
+.z-index-smaller{
+  z-index: 500;
+}
+
 .autocomplete-full-width{
   width: 100%;
 }
@@ -160,6 +164,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .modal-center-items{
   display:flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .autocomplete-form input{
@@ -171,11 +176,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   z-index: 10000;
 }
 
-.selectUserForReservation{
-  padding:-2px;
+.buttonAddUserToReservation{
+  font-size: 14px;
+  padding:2px 10px;
   border-radius: 8px;
-  background-color: #d79292;
-  color: #e8e1e1;
+  background-color: #efd19b;
+  color: #231414;
+  border:1px groove #000;
+  float:right;
 }
 
 html, body { height: 100%; }
