Checking room capacity, and its displaying in search modal for better user experience. Also added new button for profile page and made profile page for changing user data and rejecting and accepting requests.

--- a/src/app/components/attendee-search-modal/attendee-search-modal.component.html
+++ b/src/app/components/attendee-search-modal/attendee-search-modal.component.html
@@ -3,6 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <p>Search for attendees and add them!</p>
+        <span class="float-right"></span>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                 (click)="onClose()"
         ></button>
@@ -11,10 +12,10 @@
 
         <form class="autocomplete-form">
           <mat-form-field class="autocomplete-full-width" appearance="fill">
-            <mat-label>Add users:</mat-label>
+            <mat-label>{{capacity-sumOfAttendees}} invitation(s) remaining</mat-label>
             <br>
             <input
-              placeholder="email:"
+
               type="text"
               aria-label="user"
               [matAutocomplete]="auto"
