--- a/src/app/components/reservation-item/reservation-item.component.html
+++ b/src/app/components/reservation-item/reservation-item.component.html
@@ -6,37 +6,40 @@
       <fa-icon
         *ngIf="currentUser"
         (click)="deleteReservation(reservation)"
-        [ngStyle]="{'color':'#f00','float':'right', 'margin':'0px 10px'}"
+        [ngStyle]="{'color':'#f00', 'margin':'0px 10px'}"
         [icon]="faDelete"
-        class="pointer">
+        class="pointer float-right">
       </fa-icon>
       <fa-icon
         (click)="showAttendeesToggle(reservation)"
-        [ngStyle]="{'color':'#00f','float':'right', 'margin':'0px 10px'}"
+        [ngStyle]="{'color':'#00f', 'margin':'0px 10px'}"
         [icon]="faPeopleGroup"
-        class="pointer">
+        class="pointer float-right">
       </fa-icon>
       <fa-icon
         [icon]="faAddAttendee"
-        [ngStyle]="{'color':'#e7c492','float':'right', 'margin':'0px 10px'}"
-        class="pointer"
+        [ngStyle]="{'color':'#e7c492', 'margin':'0px 10px'}"
+        class="pointer float-right"
         (click)="openAddAttendeePage()"
         routerLink="/dashboard/attendees"
-        [queryParams]="{id: reservation.id}"
+        [queryParams]="{
+        id: reservation.id,
+        roomCapacity:reservation.room.capacity
+        }"
       >
       </fa-icon>
       <fa-icon
         *ngIf="currentUser"
         (click)="showEditModalToggle(reservation)"
-        [ngStyle]="{'color':'#0f0','float':'right', 'margin':'0px 10px'}"
+        [ngStyle]="{'color':'#0f0', 'margin':'0px 10px'}"
         [icon]="faPen"
-        class="pointer">
+        class="pointer float-right">
       </fa-icon>
       <fa-icon
         (click)="showModalToggle(reservation)"
-        [ngStyle]="{'color':'#ce2dce','float':'right', 'margin':'0px 10px'}"
+        [ngStyle]="{'color':'#ce2dce', 'margin':'0px 10px'}"
         [icon]="faEye"
-        class="pointer">
+        class="pointer float-right">
       </fa-icon>
     </h1>
     <div class="card-body">
