Reservation requests for attendees, autocomplete filtering just not occupied users, methods in user room and res. services

--- a/src/app/components/attendee-search-modal/attendee-search-modal.component.html
+++ b/src/app/components/attendee-search-modal/attendee-search-modal.component.html
@@ -33,7 +33,7 @@
               <mat-option
                 *ngFor="let user of filteredUsers | async"
                 [value]="user">
-                {{user.email}}
+                #{{user.id+' | '+user.email}}
                 <button
                   (click)="callUserToReservation(user)"
                   class="buttonAddUserToReservation"
