--- a/src/app/components/reservation-item/reservation-item.component.html
+++ b/src/app/components/reservation-item/reservation-item.component.html
@@ -24,6 +24,8 @@
         routerLink="/dashboard/attendees"
         [queryParams]="{
         id: reservation.id,
+        started_at:reservation.started_at,
+        finished_at:reservation.finished_at,
         roomCapacity:reservation.room.capacity
         }"
       >
