--- a/src/app/components/modal-new-reservation/modal-new-reservation.component.html
+++ b/src/app/components/modal-new-reservation/modal-new-reservation.component.html
@@ -30,7 +30,10 @@
           <label>Name</label>
           <input type="text" name="reservationName" formControlName="name" id="name"><br>
           <label>Room</label>
-          <select formControlName="roomId" name="room">
+          <select formControlName="roomId" name="room"
+          [disabled]="newReservationForm.get('started_at')?.value===null&&
+          newReservationForm.get('finished_at')?.value===null"
+          >
             <option
               *ngFor="let room of rooms$|async"
               [ngValue]="room.id">
