Reservations for every room is done, Room item blue icon functionality. On the very simple way for now.

--- a/src/app/components/room-item/room-item.component.html
+++ b/src/app/components/room-item/room-item.component.html
@@ -17,7 +17,7 @@
       </fa-icon>
       <fa-icon
         *ngIf="currentUser"
-      (click)="showThisRoomReservationsModal()"
+      (click)="showThisRoomReservationsModal(room)"
       [ngStyle]="{'color':'#2553d2', 'margin':'0px 10px'}"
       class="pointer float-right"
       [icon]="faClipboard">
