--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper bounce-in-top">
   <form [formGroup]="login">
     <div class="form-group">
       <h1 id="error-message"></h1>
