--- a/src/app/components/search-room/search-room.component.html
+++ b/src/app/components/search-room/search-room.component.html
@@ -1,4 +1,4 @@
-<div class="container-lg mt-5 search-section">
+<div class="container-lg mt-5 search-section swing-in-top-fwd">
   <form (ngSubmit)="onSubmit()" [formGroup]="searchRoomForm" class="search-form">
 
     <label for="name">Name: </label>
