--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper bounce-in-top">
   <form [formGroup]="register">
     <div class="form-group">
       <h2 class="text-center">Sign up</h2>
