my profile, invited and coming reservations are made

--- a/src/app/components/attendees/attendees.component.html
+++ b/src/app/components/attendees/attendees.component.html
@@ -21,5 +21,4 @@
   (onAddUserToReservation)="addUserToReservation($event)"
   [capacity]="getCapacity()"
   [sumOfAttendees]="getSumOfAttendees()"
->
-</app-attendee-search-modal>
+></app-attendee-search-modal>
