Duration checking, if expired of not.

--- a/src/app/components/room-reservations-modal/room-reservations-modal.component.html
+++ b/src/app/components/room-reservations-modal/room-reservations-modal.component.html
@@ -3,24 +3,30 @@
     <div class="modal-content">
       <div class="modal-header insert-new-item modal-normal-header">
         <h1>Scheduled reservations for the
-        <button type="button"
-                class="btn-close float-right"
-                id="close-button-new"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-                (click)="onClose()"
-        ></button>
+          <button type="button"
+                  class="btn-close float-right"
+                  id="close-button-new"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                  (click)="onClose()"
+          ></button>
           "{{room?.name}}":
         </h1>
       </div>
       <div class="modal-body">
         <ng-container *ngIf="reservations.length>0; else noReservations">
-        <div *ngFor="let reservation of reservations" class="little-item">
-          <div>
-            <h2>{{reservation.name}}</h2>
+          <div *ngFor="let reservation of reservations" class="room-reservation-item">
+            <!--          <div [ngClass]="todayDate.getDate()>reservation.started_at.transform('')? 'expired' : 'not-expired'">-->
+            <ng-container *ngIf="reservation && reservation.finished_at && todayDate">
+              <div
+                [ngClass]="todayDate > reservation.finished_at ? 'expired' : 'not-expired'">
+                <div>
+                  <h2>{{reservation.name}}</h2>
+                </div>
+                Duration: <br>{{reservation.started_at}} - {{reservation.finished_at}}
+              </div>
+            </ng-container>
           </div>
-          Duration: <br>{{reservation.started_at}} - {{reservation.finished_at}}
-        </div>
         </ng-container>
         <ng-template #noReservations>
           <div class="2-flex p-2">
